# arrayfire-haskell

./: .ghci  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Main.hs  README.md  arrayfire.cabal  arrayfire.nix  cabal.project  default.nix  fire.cabal  flake.nix  pkg.nix  release.nix  shell.nix  stack.yaml
.github/workflows/: ci.yml  main.yml
cbits/: eigsh.c  wrapper.c
doctest/: Main.hs
doctests/: Main.hs
exe/: Main.hs
include/: algorithm.h  arith.h  array.h  backend.h  blas.h  complex.h  cuda.h  data.h  defines.h  device.h  exception.h  features.h  fire.h  graphics.h  image.h  index.h  internal.h  lapack.h  openCL.h  random.h  seq.h  signal.h  sparse.h  statistics.h  util.h  vision.h
nix/: default.nix  nixpkgs.nix
src/: ArrayFire.hs
src/ArrayFire/: Algorithm.hs  Arith.hs  Array.hs  BLAS.hs  Backend.hs  Data.hs  Device.hs  Exception.hs  FFI.hs  Features.hs  Graphics.hs  Image.hs  Index.hs  Internal.hs  Jacobi.hs  LAPACK.hs  OpenCL.hs  Orphans.hs  Random.hs  Signal.hs  Sparse.hs  Statistics.hs  Types.hs  Util.hs  Vision.hs
src/ArrayFire/Internal/: Algorithm.hs  Algorithm.hsc  Arith.hs  Arith.hsc  Array.hs  Array.hsc  BLAS.hs  BLAS.hsc  Backend.hs  Backend.hsc  Blas.hsc  CUDA.hs  CUDA.hsc  Complex.hsc  Cuda.hsc  Data.hs  Data.hsc  Defines.hsc  Device.hs  Device.hsc  Exception.hs  Exception.hsc  Features.hs  Features.hsc  Graphics.hs  Graphics.hsc  Image.hs  Image.hsc  Images.hsc  Index.hs  Index.hsc  Internal.hs  Internal.hsc  LAPACK.hs  LAPACK.hsc  Lapack.hsc  OpenCL.hs  OpenCL.hsc  Random.hs  Random.hsc  (+13 more)
src/Data/Array/: Fire.hsc  Fire_hsc_make.c
src/Data/Array/Fire/Internal/: Algorithm.hsc  Arith.hsc  Array.hsc  BLAS.hsc  Backend.hsc  CUDA.hsc  Complex.hsc  Data.hsc  Defines.hsc  Device.hsc  Exception.hsc  Features.hsc  Graphics.hsc  Images.hsc  Index.hsc  Internal.hsc  LAPACK.hsc  OpenCL.hsc  Random.hsc  Seq.hsc  Signal.hsc  Sparse.hsc  Statistics.hsc  Util.hsc  Vision.hsc
test/: Main.hs
test/ArrayFire/: AlgorithmSpec.hs  ArithSpec.hs  ArraySpec.hs  BLASSpec.hs  BackendSpec.hs  DataSpec.hs  DeviceSpec.hs  ExceptionSpec.hs  FeaturesSpec.hs  GraphicsSpec.hs  ImageSpec.hs  IndexSpec.hs  JacobiSpec.hs  LAPACKSpec.hs  NumericalSpec.hs  RandomSpec.hs  SignalSpec.hs  SparseSpec.hs  StatisticsSpec.hs  TestHelper.hs  UtilSpec.hs  VisionSpec.hs
test/Test/Hspec/: ApproxExpect.hs
