name:                arrayfire
version:             0.1.0.0
synopsis:            Haskell bindings to ArrayFire
description:         High-level Haskell bindings to ArrayFire
homepage:            https://github.com/dmjio/fire
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson (c) 2018-2020
category:            Math
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  other-modules:
    ArrayFire.FFI
  exposed-modules:
    ArrayFire.Algorithm
    ArrayFire.Arith
    ArrayFire.Array
    ArrayFire.Backend
    ArrayFire.BLAS
    ArrayFire.Data
    ArrayFire.Device
    ArrayFire.Exception
    ArrayFire.Features
    ArrayFire.Graphics
    ArrayFire.Image
    ArrayFire.LAPACK
    ArrayFire.Random
    ArrayFire.Signal
    ArrayFire.Sparse
    ArrayFire.Statistics
    ArrayFire.Types
    ArrayFire.Util
    ArrayFire.Vision
    ArrayFire.Internal.Algorithm
    ArrayFire.Internal.Arith
    ArrayFire.Internal.Array
    ArrayFire.Internal.Backend
    ArrayFire.Internal.BLAS
--  ArrayFire.Internal.CUDA
    ArrayFire.Internal.Data
    ArrayFire.Internal.Defines
    ArrayFire.Internal.Device
    ArrayFire.Internal.Exception
    ArrayFire.Internal.Features
    ArrayFire.Internal.Graphics
    ArrayFire.Internal.Image
    ArrayFire.Internal.Index
    ArrayFire.Internal.Internal
    ArrayFire.Internal.LAPACK
--  ArrayFire.Internal.OpenCL
    ArrayFire.Internal.Random
--    ArrayFire.Internal.Seq
    ArrayFire.Internal.Signal
    ArrayFire.Internal.Sparse
    ArrayFire.Internal.Statistics
    ArrayFire.Internal.Types
    ArrayFire.Internal.Util
    ArrayFire.Internal.Vision
  build-tools:
    hsc2hs
  include-dirs:
    /opt/arrayfire/include
  extra-lib-dirs:
    /opt/arrayfire/lib
  ld-options:
    -rpath /opt/arrayfire/lib
  cc-options:
    -fPIC
  extra-libraries:
    af
  c-sources:
    cbits/wrapper.c
  build-depends:
    base < 5, vector
  hs-source-dirs:
    src
  default-language:
    Haskell2010

executable main
  hs-source-dirs:
    exe
  main-is:
    Main.hs
  build-depends:
    base < 5, arrayfire, vector
  default-language:
    Haskell2010

executable gen
  main-is:
    Main.hs
  hs-source-dirs:
    gen
  build-depends:
    base < 5, parsec, text, directory
  default-language:
    Haskell2010
  other-modules:
    Lex
    Parse
    Print
    Types
