name:                fire
version:             0.1.0.0
synopsis:            Haskell bindings to ArrayFire
description:         High-level Haskell bindings to ArrayFire
homepage:            https://github.com/dmjio/fire
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson (c) 2018-2020
category:            Math
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:
    Data.Array.Fire.Internal.Algorithm
    Data.Array.Fire.Internal.Arith
    Data.Array.Fire.Internal.Array
    Data.Array.Fire.Internal.Backend
    Data.Array.Fire.Internal.BLAS
    Data.Array.Fire.Internal.Complex
    Data.Array.Fire.Internal.CUDA
    Data.Array.Fire.Internal.Data
    Data.Array.Fire.Internal.Defines
    Data.Array.Fire.Internal.Device
    Data.Array.Fire.Internal.Exception
    Data.Array.Fire.Internal.Features
    Data.Array.Fire.Internal.Graphics
    Data.Array.Fire.Internal.Images
    Data.Array.Fire.Internal.Index
    Data.Array.Fire.Internal.Internal
    Data.Array.Fire.Internal.LAPACK
    Data.Array.Fire.Internal.OpenCL
    Data.Array.Fire.Internal.Random
    Data.Array.Fire.Internal.Seq
    Data.Array.Fire.Internal.Signal
    Data.Array.Fire.Internal.Sparse
    Data.Array.Fire.Internal.Statistics
    Data.Array.Fire.Internal.Util
    Data.Array.Fire.Internal.Vision
  build-tools:
    hsc2hs
  include-dirs:
    include
  build-depends:
    base < 5
  hs-source-dirs:
    src
  default-language:
    Haskell2010

executable main
  main-is:
    Main.hs
  build-depends:
    base < 5, fire
  default-language:
    Haskell2010
