name:                fire
version:             0.1.0.0
synopsis:            Haskell bindings to ArrayFire
description:         High-level Haskell bindings to ArrayFire
homepage:            https://github.com/dmjio/fire
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson (c) 2018-2020
category:            Math
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:
    ArrayFire.Internal.Algorithm
    ArrayFire.Internal.Arith
    ArrayFire.Internal.Array
    ArrayFire.Internal.Backend
    ArrayFire.Internal.BLAS
    ArrayFire.Internal.Complex
    ArrayFire.Internal.CUDA
    ArrayFire.Internal.Data
    ArrayFire.Internal.Defines
    ArrayFire.Internal.Device
    ArrayFire.Internal.Exception
    ArrayFire.Internal.Features
    ArrayFire.Internal.Graphics
    ArrayFire.Internal.Images
    ArrayFire.Internal.Index
    ArrayFire.Internal.Internal
    ArrayFire.Internal.LAPACK
    ArrayFire.Internal.OpenCL
    ArrayFire.Internal.Random
    ArrayFire.Internal.Seq
    ArrayFire.Internal.Signal
    ArrayFire.Internal.Sparse
    ArrayFire.Internal.Statistics
    ArrayFire.Internal.Util
    ArrayFire.Internal.Vision
  build-tools:
    hsc2hs
  include-dirs:
    include
  build-depends:
    base < 5
  hs-source-dirs:
    src
  default-language:
    Haskell2010

executable main
  hs-source-dirs:
    exe
  main-is:
    Main.hs
  build-depends:
    base < 5, fire
  default-language:
    Haskell2010

executable gen
  main-is:
    Main.hs
  hs-source-dirs:
    gen
  build-depends:
    base < 5, parsec, text, directory
  default-language:
    Haskell2010
